# stellapy

./: CMakeLists.txt  README.md
alepy/: alepy.cpp
atariemu/: CMakeLists.txt  atariemu.cpp  atariemu.h  download_roms.py  testatariemu.cpp  testatariemu.py
